refactoring to split out llm-service and tree-nav and be more deliberate with state management

--- a/src/index.html
+++ b/src/index.html
@@ -854,6 +854,8 @@
       </div>
     </div>
     <script src="utils.js"></script>
+    <script src="llm-service.js"></script>
+    <script src="tree-nav.js"></script>
     <script src="renderer.js"></script>
     <script src="search.js"></script>
   </body>
