--- a/src/settings-modal.html
+++ b/src/settings-modal.html
@@ -714,6 +714,6 @@
 
     <div class="footer" id="footer"></div>
     <script src="utils.js"></script>
-    <script src="settings.js"></script>
+    <script src="settings-modal.js"></script>
   </body>
 </html>
