File improvements to save to temp file by default, intercept close and ask user to save or discard, and adding recent files to the File menu

--- a/src/index.html
+++ b/src/index.html
@@ -533,8 +533,15 @@
         margin: 0;
         line-height: 1.4;
         display: block;
+        min-height: 20px;
+        visibility: visible;
+        opacity: 1;
+        height: auto;
+        overflow: visible;
         white-space: normal;
         word-wrap: break-word;
+        position: static;
+        transform: none;
         flex: 1;
       }
 
